@@ -8,10 +8,7 @@
 <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="640">
 <TR>
 <TD WIDTH="80"></TD>
-<TD WIDTH="80">
-  <B><I><FONT SIZE="+2" COLOR="BLUE">MITRE</FONT></I></B>
-</TD>
-<TD WIDTH="480" ALIGN="RIGHT">
+<TD WIDTH="560" COLSPAN="2" ALIGN="RIGHT">
   <B><FONT SIZE="+2">Transfor<FONT Color="blue">Mii</FONT>X</FONT></B>
   <SUP>TM</SUP>
 </TD>
@@ -292,6 +289,12 @@ beneficial to the development.
 
 <!-- Entry -->
 <TR BGColor="#EEEEEE">
+  <TD><A HREF="mailto:jbailey@nisa.net">Bailey, Jeff</A></TD>
+  <TD><BR></TD>
+</TR>
+
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
   <TD><A HREF="mailto:bbrown@solana.com">Brown, William Lewis</A></TD>
   <TD><BR></TD>
 </TR>
@@ -311,6 +314,15 @@ beneficial to the development.
 <!-- Entry -->
 <TR BGColor="#EEEEEE">
   <TD><A HREF="mailto:jiwei.wang@saraide.com">Wang, Jiwei</A></TD>
+  <TD><BR></TD>
+</TR>
+
+<!-- Entry -->
+<TR BGColor="#EEEEEE">
+  <TD>
+      <A HREF="mailto:bzwische@email.archlab.tuwien.ac.at">
+       Zwischenbrugger, Bernhard</A>
+  </TD>
   <TD><BR></TD>
 </TR>
 
